// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TripDetails displays both scheduled and predicted times for CR if there is a delay of more than 5 minutes 1`] = `
<table
  className="schedule-table__subtable"
>
  <thead>
    <tr>
      <td
        colSpan={3}
      >
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Trip length
          </div>
          7
           stops, 
          56
           minutes total
        </div>
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Fare
          </div>
          $12.25
          <a
            className="schedule-table__subtable-trip-info-link"
            href="/fares/commuter_rail?destination=place-NEC-1851&origin=place-bbsta"
          >
            View fares
          </a>
        </div>
      </td>
    </tr>
    <tr>
      <th
        className="schedule-table__subtable-data"
        scope="col"
      >
        Stops
      </th>
      <th
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
        scope="col"
      >
        Arrival
      </th>
    </tr>
  </thead>
  <tbody
    className="schedule-table__subtable-tbody"
  >
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-bbsta"
        >
          Back Bay
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        <span
          className="schedule-table__time--delayed schedule-table__time--delayed-future_stop"
        >
          04:00 PM
        </span>
        <br
          className="hidden-sm-up"
        />
        04:01 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-rugg"
        >
          Ruggles
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:04 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2108"
        >
          Sharon
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        <span
          className="schedule-table__time--delayed schedule-table__time--delayed-future_stop"
        >
          04:22 PM
        </span>
        <br
          className="hidden-sm-up"
        />
        04:22 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2040"
        >
          Mansfield
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:30 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1969"
        >
          Attleboro
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        <span
          className="schedule-table__time--delayed schedule-table__time--delayed-future_stop"
        >
          04:38 PM
        </span>
        <br
          className="hidden-sm-up"
        />
        04:39 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1919"
        >
          South Attleboro
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:48 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1851"
        >
          Providence
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        <span
          className="schedule-table__time--delayed schedule-table__time--delayed-future_stop"
        >
          04:58 PM
        </span>
        <br
          className="hidden-sm-up"
        />
        04:57 PM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TripDetails it renders an error if fetch failed 1`] = `
<p>
  <em>
    Error loading trip details. Please try again later.
  </em>
</p>
`;

exports[`TripDetails it renders trip details for a CR trip 1`] = `
<table
  className="schedule-table__subtable"
>
  <thead>
    <tr>
      <td
        colSpan={3}
      >
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Trip length
          </div>
          10
           stops, 
          69
           minutes total
        </div>
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Fare
          </div>
          $12.25
          <a
            className="schedule-table__subtable-trip-info-link"
            href="/fares/commuter_rail?destination=place-NEC-1851&origin=place-sstat"
          >
            View fares
          </a>
        </div>
      </td>
    </tr>
    <tr>
      <th
        className="schedule-table__subtable-data"
        scope="col"
      >
        Stops
      </th>
      <th
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
        scope="col"
      >
        Fare
      </th>
      <th
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
        scope="col"
      >
        Arrival
      </th>
    </tr>
  </thead>
  <tbody
    className="schedule-table__subtable-tbody"
  >
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-sstat"
        >
          South Station
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        02:30 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-bbsta"
        >
          Back Bay
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $2.40
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        02:35 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-rugg"
        >
          Ruggles
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $2.40
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        02:38 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2173"
        >
          Route 128
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $7.00
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        02:51 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2139"
        >
          Canton Junction
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $8.00
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        02:57 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2108"
        >
          Sharon
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $8.75
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        03:03 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-2040"
        >
          Mansfield
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $10.50
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        03:11 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1969"
        >
          Attleboro
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $11.00
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        03:19 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1919"
        >
          South Attleboro
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $11.00
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        03:29 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-NEC-1851"
        >
          Providence
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        $12.25
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        03:39 PM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TripDetails it renders trip details for a bus trip 1`] = `
<table
  className="schedule-table__subtable"
>
  <thead>
    <tr>
      <td
        colSpan={3}
      >
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Trip length
          </div>
          11
           stops, 
          14
           minutes total
        </div>
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Fare
          </div>
          $2.40
          <a
            className="schedule-table__subtable-trip-info-link"
            href="/fares/bus-fares"
          >
            View fares
          </a>
        </div>
      </td>
    </tr>
    <tr>
      <th
        className="schedule-table__subtable-data"
        scope="col"
      >
        Stops
      </th>
      <th
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
        scope="col"
      >
        Arrival
      </th>
    </tr>
  </thead>
  <tbody
    className="schedule-table__subtable-tbody"
  >
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-sstat"
        >
          South Station
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:46 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-crtst"
        >
          Courthouse
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:48 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-wtcst"
        >
          World Trade Center
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:50 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-conrd"
        >
          Silver Line Way
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:53 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/247"
        >
          Northern Ave @ Harbor St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:54 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/30249"
        >
          Northern Ave @ Tide St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:55 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/30250"
        >
          23 Drydock Ave
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:56 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/30251"
        >
          27 Drydock Ave
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:56 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/31259"
        >
          Drydock Ave @ Black Falcon Ave
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:56 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/31258"
        >
          88 Black Falcon
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:57 AM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/31255"
        >
          Drydock Ave @ Design Center Place
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        06:00 AM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TripDetails uses a predicted departure time in preference to a scheduled one 1`] = `
<table
  className="schedule-table__subtable"
>
  <thead>
    <tr>
      <td
        colSpan={3}
      >
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Trip length
          </div>
          39
           stops, 
          32
           minutes total
        </div>
        <div
          className="schedule-table__subtable-trip-info"
        >
          <div
            className="schedule-table__subtable-trip-info-title u-small-caps u-bold"
          >
            Fare
          </div>
          $1.70
          <a
            className="schedule-table__subtable-trip-info-link"
            href="/fares/bus-fares"
          >
            View fares
          </a>
        </div>
      </td>
    </tr>
    <tr>
      <th
        className="schedule-table__subtable-data"
        scope="col"
      >
        Stops
      </th>
      <th
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
        scope="col"
      >
        Arrival
      </th>
    </tr>
  </thead>
  <tbody
    className="schedule-table__subtable-tbody"
  >
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/place-forhl"
        >
          Forest Hills
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:39 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/596"
        >
          3867 Washington St opp Tollgate Way
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:42 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/597"
        >
          Washington St @ Lochdale Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:42 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/598"
        >
          Washington St @ Archdale Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:43 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/599"
        >
          Washington St @ Mosgrove Ave
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:43 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/600"
        >
          Washington St opp Granfield Ave
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:44 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/601"
        >
          Washington St @ South St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:45 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/602"
        >
          South St @ Taft Hill Terr
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:46 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/797"
        >
          Belgrade Ave @ Robert St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:47 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/798"
        >
          Belgrade Ave opp Pinehurst St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:47 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/799"
        >
          Belgrade Ave opp Penfield St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:47 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/800"
        >
          Belgrade Ave @ Walworth St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:48 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/801"
        >
          Belgrade Ave opp Aldrich St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:48 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/802"
        >
          277 Belgrade Ave opp Rexhame St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:49 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/803"
        >
          Belgrade Ave @ McCraw St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:49 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/804"
        >
          Belgrade Ave @ West Roxbury Pkwy
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:50 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/805"
        >
          Belgrade Ave @ Centre St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:51 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/806"
        >
          Centre St @ Willow St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:53 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/807"
        >
          Centre St @ Corey St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:54 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/808"
        >
          Centre St opp Bellevue st
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:55 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/810"
        >
          Opp 2000 Centre St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:56 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/821"
        >
          Centre St @ Lorette St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:58 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/811"
        >
          Centre St @ Spring St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:58 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/822"
        >
          Centre St @ Autumn St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        04:59 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/823"
        >
          Centre St @ Cass St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:00 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/824"
        >
          Centre St @ Bronx Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:00 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/825"
        >
          Centre St opp Wedgemere Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:00 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/826"
        >
          Centre St @ Glenhaven Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:01 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/10768"
        >
          Centre St @ Grove St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:01 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/827"
        >
          Centre St @ Northdale Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:01 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/828"
        >
          Centre St @ Fairlane Rd
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:02 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/829"
        >
          2519 Centre St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:02 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/830"
        >
          Stimson St @ Centre St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:02 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/831"
        >
          80 Stimson St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:03 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/832"
        >
          Stimson St @ Washington St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:03 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/618"
        >
          Washington St opp Meshaka St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:05 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/10618"
        >
          Washington St @ Sumner St
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:05 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/10835"
        >
          Dedham Mall @ South Side
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:09 PM
      </td>
    </tr>
    <tr
      className="schedule-table__subtable-row"
    >
      <td
        className="schedule-table__subtable-data"
      >
        <a
          href="/stops/10833"
        >
          Dedham Mall @ Stop & Shop
        </a>
      </td>
      <td
        className="schedule-table__subtable-data schedule-table__subtable-data--right-adjusted"
      >
        05:11 PM
      </td>
    </tr>
  </tbody>
</table>
`;
